--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,7 @@
   <tr>
     <th>Title</th>
     <th>Text</th>
-    <th colspan="2"></th>
+    <th colspan="3"></th>
   </tr>
   <% @articles.each do |article| %>
   <tr>
@@ -14,6 +14,10 @@
     <td><%= article.text %></td>
     <td><%= link_to 'Show', article_path(article) %>
     <td><%= link_to 'Edit', edit_article_path(article) %></td>
+    <td><%= link_to 'Destroy', article_path(article),
+      method: :delete, # html5 attribute
+      data: { confirm: 'Are you sure?' } # html5 attribute
+    %></td>
   </tr>
   <% end %>
 </table>
